--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,7 +1,13 @@
 .app-wrapper {
+    font-family: "Favorit", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
     display: grid;
-    grid-template-areas: 'header header' 'nav content';
+    grid-template-areas: 'header' 'content';
     grid-template-rows: 60px 1fr;
-    grid-template-columns: 2fr 10fr;
-    // grid-gap: 10px;
+}
+
+@media(max-width: 576px) {
+    .app-wrapper {
+        grid-template-areas: 'upper-navigation' 'content' 'header';
+        grid-template-rows: 50px 1fr 50px;
+    }
 }
