--- a/src/components/pages/profile/profile.scss
+++ b/src/components/pages/profile/profile.scss
@@ -1,25 +1,25 @@
 .profile {
-    &__header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .header {
+        width: 60%;
         display: flex;
         justify-content: start;
+        align-items: center;
     }
-    &__name {
-        text-align: center;
-        font-size: 30px;
-    }
-    &__avatar {
-        width: auto;
-        height: 250px;
-        margin-right: 30px;
-    }
-    &__description {}
-    &__socials {
-        &-logo {}
-        &-link {
-            a {
-                color: black;
-                text-decoration: none;
-            }
+}
+
+@media(max-width: 992px) {}
+
+@media(max-width: 768px) {
+    .profile {
+        .header {
+            width: 100%;
         }
     }
+}
+
+@media(max-width: 576px) {
+    .profile {}
 }
