--- a/src/components/app/upper-navigation.scss
+++ b/src/components/app/upper-navigation.scss
@@ -4,8 +4,10 @@
 
 @media(max-width: 576px) {
     .upper-navigation {
+        box-sizing: border-box;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
+        padding: 0px 30px 0px 30px;
         align-items: center;
         z-index: 10;
         height: 50px;
@@ -16,6 +18,10 @@
         background-color: white;
         .logo {
             height: 40px;
+        }
+        .search {
+            width: 30px;
+            height: 30px;
         }
     }
 }
