--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -10,6 +10,7 @@
         margin: 0 auto;
         max-width: 1580px;
         display: flex;
+        position: relative;
         justify-content: space-between;
         align-items: center;
         padding: 5px 15px;
