--- a/src/components/pages/profile/profile-description/profile-description.scss
+++ b/src/components/pages/profile/profile-description/profile-description.scss
@@ -11,6 +11,45 @@
             margin-left: 10px;
         }
     }
+    .status {
+        user-select: none;
+        &-text {
+            cursor: pointer;
+        }
+        &-edit {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            .input {
+                text-align: center;
+                font-family: monospace;
+                background-color: white;
+                height: 20px;
+                padding: 10px;
+                transition: background-color .25s ease;
+                width: 230px;
+                border: 1px solid white;
+                border-radius: 3px;
+                color: black;
+                overflow: hidden;
+                &:active,
+                &:hover,
+                &:focus {
+                    color: white;
+                    background-color: #fff;
+                    background-color: transparent;
+                }
+                &+.input {
+                    margin-top: 10px;
+                }
+            }
+            .button {
+                margin-top: 10px;
+                padding: 10px 30px;
+            }
+        }
+    }
 }
 
 @media(max-width: 992px) {}
