--- a/src/components/header/navigation/search-input/search-input.scss
+++ b/src/components/header/navigation/search-input/search-input.scss
@@ -1,7 +1,7 @@
 .search-input {
     display: flex;
-    align-items: center;
-    justify-content: start;
+    align-items: flex-start;
+    justify-content: flex-start;
     background-color: white;
     height: 20px;
     padding: 10px;
