--- a/src/components/pages/login/login.scss
+++ b/src/components/pages/login/login.scss
@@ -14,8 +14,10 @@
     form {
         display: flex;
         flex-direction: column;
-        margin-top: 20px;
+        align-items: center;
+        margin-top: 10px;
         .input {
+            margin-top: 10px;
             font-family: monospace;
             background-color: white;
             height: 20px;
@@ -33,9 +35,42 @@
                 background-color: #fff;
                 background-color: transparent;
             }
-            &+.input {
-                margin-top: 10px;
+            &.remember-me {
+                margin-right: 10px;
+                margin-top: 0;
+                width: 20px;
+                height: 20px;
             }
+        }
+        label {
+            margin-top: 15px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+        }
+        .captcha {
+            display: flex;
+            flex-direction: column;
+            &-img {
+                margin-top: 20px;
+                border-radius: 6px;
+            }
+        }
+    }
+}
+
+@media(max-width: 992px) {}
+
+@media(max-width: 768px) {
+    .login {}
+}
+
+@media(max-width: 576px) {
+    .login {
+        .logo {
+            height: auto;
+            width: 200px;
         }
     }
 }
