--- a/src/components/pages/profile/profile-description/profile-description.scss
+++ b/src/components/pages/profile/profile-description/profile-description.scss
@@ -1,14 +1,18 @@
 .description {
+    font-family: monospace;
     display: flex;
     flex-direction: column;
     line-height: 25px;
     .socials {
-        margin-top: 20px;
+        margin-top: 10px;
         display: flex;
         align-items: center;
         flex-wrap: wrap;
-        a {
+        div {
             margin-left: 10px;
+            &:first-child {
+                margin-left: 0;
+            }
         }
     }
     .status {
@@ -21,33 +25,62 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            .input {
-                text-align: center;
-                font-family: monospace;
-                background-color: white;
-                height: 20px;
-                padding: 10px;
-                transition: background-color .25s ease;
-                width: 230px;
-                border: 1px solid white;
-                border-radius: 3px;
-                color: black;
-                overflow: hidden;
-                &:active,
-                &:hover,
-                &:focus {
-                    color: white;
-                    background-color: #fff;
-                    background-color: transparent;
-                }
-                &+.input {
-                    margin-top: 10px;
-                }
-            }
             .button {
                 margin-top: 10px;
                 padding: 10px 30px;
             }
+        }
+    }
+    .button {
+        margin-top: 15px;
+    }
+    form {
+        div {
+            margin-top: 10px;
+        }
+        text-align: center;
+        font-size: 18px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .input {
+            font-family: monospace;
+            background-color: white;
+            height: 20px;
+            padding: 10px;
+            transition: background-color .25s ease;
+            width: 230px;
+            border: 1px solid white;
+            border-radius: 3px;
+            color: black;
+            overflow: hidden;
+            &:active,
+            &:hover,
+            &:focus {
+                color: white;
+                background-color: #fff;
+                background-color: transparent;
+            }
+            &.contacts {}
+            &.looking-for-a-job-descr,
+            &.about-me {
+                resize: none;
+                height: 100px;
+            }
+        }
+        label {
+            margin-top: 10px;
+            div {
+                margin-top: 0;
+                .looking-for-a-job {
+                    margin-right: 10px;
+                    width: 20px;
+                    height: 20px;
+                }
+            }
+            display: flex;
+            align-items: center;
+            cursor: pointer;
         }
     }
 }
