--- a/src/components/pages/profile/profile.scss
+++ b/src/components/pages/profile/profile.scss
@@ -5,8 +5,17 @@
     .header {
         width: 60%;
         display: flex;
-        justify-content: start;
-        align-items: center;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+}
+
+.profile-temple-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .button {
+        margin-bottom: 20px;
     }
 }
 
