--- a/src/components/pages/search/users/user/user.scss
+++ b/src/components/pages/search/users/user/user.scss
@@ -20,6 +20,7 @@
         background-color: transparent;
         background-repeat: no-repeat;
         background-position: center;
+        border-radius: 8px;
         width: 100%;
         height: 110px;
     }
@@ -28,15 +29,18 @@
         color: black;
         line-height: 15px;
     }
-    .status {
-        color: black;
-    }
     .button {
         padding: 10px;
         font-size: 15px;
         font-family: monospace;
     }
     .description {
+        .status {
+            padding: 10px 0px;
+            color: black;
+            overflow: hidden;
+            line-height: 15px;
+        }
         width: 60%;
         height: 110px;
         display: flex;
