--- a/src/components/pages/profile/my-posts/my-post/my-post.scss
+++ b/src/components/pages/profile/my-posts/my-post/my-post.scss
@@ -1,20 +1,66 @@
-.my-post {
-    color: black;
-    font-family: monospace;
-    word-break: break-all;
-    background-color: #fff;
-    border-radius: 10px;
-    padding: 10px;
-    &+& {
-        margin-top: 10px;
-    }
-    .likes {
-        margin-top: 10px;
-    }
-    .post-text {}
-    .post-img {
+    .my-post {
+        color: black;
+        font-family: monospace;
+        word-break: break-all;
+        background-color: #fff;
         border-radius: 10px;
-        margin-top: 10px;
-        width: 100%;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        &+& {
+            margin-top: 10px;
+        }
+        .likes {
+            align-self: flex-end;
+            margin-top: 10px;
+        }
+        .edit-menu {
+            width: 100%;
+            display: flex;
+            padding: 0px 5px;
+            margin-bottom: 10px;
+            justify-content: space-between;
+            svg {
+                cursor: pointer;
+            }
+        }
+        &-form {
+            div {
+                text-align: center;
+                width: 100%;
+            }
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            .textarea.post-body {
+                width: 96%;
+                resize: none;
+                padding: 10px;
+                border-radius: 10px;
+                font-family: monospace;
+                background-color: black;
+                height: 140px;
+                transition: background-color .25s ease;
+                border: 1px solid white;
+                color: white;
+                &:active,
+                &:hover,
+                &:focus {
+                    color: white;
+                    background-color: #001935;
+                }
+            }
+            .button {
+                margin-top: 5px;
+                margin-bottom: 0;
+            }
+        }
+        .post-text {}
+        .post-img {
+            border-radius: 10px;
+            margin-top: 10px;
+            width: 100%;
+        }
     }
-}
