--- a/src/components/pages/profile/profile-description/profile-description.scss
+++ b/src/components/pages/profile/profile-description/profile-description.scss
@@ -4,15 +4,13 @@
     flex-direction: column;
     line-height: 25px;
     .socials {
+        margin-left: -10px;
         margin-top: 10px;
         display: flex;
         align-items: center;
         flex-wrap: wrap;
         div {
             margin-left: 10px;
-            &:first-child {
-                margin-left: 0;
-            }
         }
     }
     .status {
@@ -43,45 +41,44 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        .input {
-            font-family: monospace;
-            background-color: white;
-            height: 20px;
-            padding: 10px;
-            transition: background-color .25s ease;
-            width: 230px;
-            border: 1px solid white;
-            border-radius: 3px;
-            color: black;
-            overflow: hidden;
-            &:active,
-            &:hover,
-            &:focus {
-                color: white;
-                background-color: #fff;
-                background-color: transparent;
-            }
-            &.contacts {}
-            &.looking-for-a-job-descr,
-            &.about-me {
-                resize: none;
-                height: 100px;
+    }
+    .input {
+        font-family: monospace;
+        background-color: white;
+        height: 20px;
+        padding: 10px;
+        transition: background-color .25s ease;
+        width: 230px;
+        border: 1px solid white;
+        border-radius: 3px;
+        color: black;
+        overflow: hidden;
+        &:active,
+        &:hover,
+        &:focus {
+            color: white;
+            background-color: #fff;
+            background-color: transparent;
+        }
+        &.looking-for-a-job-descr,
+        &.about-me {
+            resize: none;
+            height: 100px;
+        }
+    }
+    label {
+        margin-top: 10px;
+        div {
+            margin-top: 0;
+            .looking-for-a-job {
+                margin-right: 10px;
+                width: 20px;
+                height: 20px;
             }
         }
-        label {
-            margin-top: 10px;
-            div {
-                margin-top: 0;
-                .looking-for-a-job {
-                    margin-right: 10px;
-                    width: 20px;
-                    height: 20px;
-                }
-            }
-            display: flex;
-            align-items: center;
-            cursor: pointer;
-        }
+        display: flex;
+        align-items: center;
+        cursor: pointer;
     }
 }
 
@@ -90,9 +87,14 @@
 @media(max-width: 576px) {
     .description {
         align-items: center;
+        text-align: center;
         z-index: 2;
         padding: 20px;
         width: 100%;
         line-height: 20px;
+        .button {}
+        .socials {
+            justify-content: center;
+        }
     }
 }
