--- a/src/components/pages/profile/profile-header/profile-header.scss
+++ b/src/components/pages/profile/profile-header/profile-header.scss
@@ -16,8 +16,12 @@
         display: flex;
         flex-direction: column;
         .name {
+            text-align: center;
             font-size: 20px;
             line-height: 23px;
+        }
+        .avatar-wrapper {
+            margin: 0 auto;
         }
     }
 }
