--- a/src/components/pages/profile/profile.scss
+++ b/src/components/pages/profile/profile.scss
@@ -3,9 +3,9 @@
     flex-direction: column;
     align-items: center;
     .header {
-        width: 60%;
+        width: 100%;
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
         align-items: flex-start;
     }
 }
@@ -15,7 +15,7 @@
     flex-direction: column;
     align-items: center;
     .button {
-        margin-bottom: 20px;
+        margin-top: 20px;
     }
 }
 
@@ -29,6 +29,4 @@
     }
 }
 
-@media(max-width: 576px) {
-    .profile {}
-}
+@media(max-width: 576px) {}
