--- a/src/components/pages/profile/profile-description/profile-description.scss
+++ b/src/components/pages/profile/profile-description/profile-description.scss
@@ -67,6 +67,7 @@
         }
         &.looking-for-a-job-descr,
         &.about-me {
+            overflow-y: scroll;
             resize: none;
             height: 100px;
         }
