--- a/src/components/common/forms-controls/form-control.scss
+++ b/src/components/common/forms-controls/form-control.scss
@@ -21,9 +21,10 @@
     box-sizing: border-box;
     text-align: center;
     margin-top: 10px;
-    width: 100%;
-    border: 2px solid red;
+    width: 90%;
+    background-color: red;
     border-radius: 4px;
     padding: 10px;
-    color: red;
+    color: white;
+    text-shadow: 2px 2px 3px black;
 }
