--- a/src/components/pages/dialogs/messages/messages.scss
+++ b/src/components/pages/dialogs/messages/messages.scss
@@ -1,6 +1,7 @@
 .messages {
-    overflow: scroll;
+    overflow: auto;
     height: 50vh;
+    grid-area: messages;
     /* хром, сафари */
     &::-webkit-scrollbar {
         width: 0;
@@ -13,7 +14,16 @@
     &.element {
         overflow: -moz-scrollbars-none;
     }
-    grid-area: messages;
+    .no-messages {
+        height: 100%;
+        font-family: monospace;
+        text-shadow: 3px 2px 2px #f92b66, -2px -2px 2px #17a2b8;
+        font-size: 40px;
+        display: flex;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
 @media(max-width: 992px) {}
