--- a/src/components/pages/friends/friend/friend.scss
+++ b/src/components/pages/friends/friend/friend.scss
@@ -1,4 +1,5 @@
 .friend {
+    text-decoration: none;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -9,7 +10,9 @@
         height: 50px;
         width: auto;
     }
-    .name {}
+    .name {
+        color: white
+    }
     .status {
         color: rgba(255, 255, 255, 0.568);
     }
