--- a/src/components/pages/profile/profile-avatar/profile-avatar.scss
+++ b/src/components/pages/profile/profile-avatar/profile-avatar.scss
@@ -10,6 +10,17 @@
         height: auto;
         margin-right: 30px;
     }
+    .button {
+        padding: 15px;
+        width: 200px;
+        margin-right: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        svg {
+            margin-left: 5px;
+        }
+    }
     .select-new-avatar {
         input[type="file"] {
             display: none;
@@ -34,6 +45,10 @@
     .avatar-wrapper {
         .select-new-avatar {
             margin-right: 0px;
+        }
+        .button {
+            margin-right: 0px;
+            width: 100%;
         }
         .avatar {
             width: 60%;
